
package model;

public enum EstadoTarea {
    
}
