
package model;

public class ReporteCiudadano {
    
}
