package enums;

public enum RolSistema {
    ADMINISTRADOR,
    FUNCIONARIO_PUBLICO,
    PROMOTOR,
    OBRERO,
    INSPECTOR_MUNICIPAL,
    CIUDADANO
}
