
package model;

public class Tarea {
    
}
