@startuml
' #############################
' #         ENUMS             #
' #############################

enum TipoIdentificacion {
    CEDULA
    PASAPORTE
    REGISTROCIVIL
    DIE
    TI
}

enum RolSistema {
    ADMINISTRADOR
    FUNCIONARIO_PUBLICO
    PROMOTOR
    OBRERO
    INSPECTOR_MUNICIPAL
    CIUDADANO
}

enum Prioridad {
    URGENTE
    ALTA
    MEDIA
    BAJA
}

enum EstadoTarea {
    PENDIENTE
    EN_PROGRESO
    COMPLETADA
    RETRASADA
}

enum TipoReparacion {
    ESTRUCTURAL
    ELECTRICA
    HIDRAULICA
    PAVIMENTACION
    OTROS
}

' #############################
' #         CLASES            #
' #############################

abstract class Persona {
    - tipoIdentificacion: TipoIdentificacion
    - numeroIdentificacion: String
    - primerNombre: String
    - segundoNombre: String
    - primerApellido: String
    - segundoApellido: String
    - email: String
    - telefono: String
}

class Usuario {
    - nombreUsuario: String
    - password: String
    - fechaRegistro: LocalDate
    - activo: boolean
    - roles: List<RolSistema>
    + login()
    + cambiarPassword()
    + tieneRol(RolSistema): boolean
}

class ProyectoReparacion {
    - codigo: String
    - nombre: String
    - direccion: String
    - tipoReparacion: TipoReparacion
    - fechaInicio: LocalDate
    - fechaFinEstimada: LocalDate
    - prioridad: Prioridad
    - aprobado: boolean
    - presupuesto: double
    + calcularAvance()
    + actualizarPresupuesto()
}

class Tarea {
    - codigo: String
    - descripcion: String
    - horasEstimadas: double
    - horasReales: double
    - estado: EstadoTarea
    - fechaAsignacion: LocalDate
    - fechaFinalizacion: LocalDate
    + actualizarEstado()
    + registrarHoras()
}

class Material {
    - codigo: String
    - nombre: String
    - cantidad: double
    - unidad: String
    - costoUnitario: double
    - proveedor: String
    - normativa: String
    + validarStock()
    + actualizarCantidad()
}

class LicenciaReparacion {
    - codigo: String
    - fechaEmision: LocalDate
    - fechaExpiracion: LocalDate
    - documentos: List<String>
    + estaVigente(): boolean
    + renovar()
}

class ReporteCiudadano {
    - codigo: String
    - descripcion: String
    - direccion: String
    - fechaReporte: LocalDate
    - estado: String
    + cambiarEstado()
    + asignarResponsable()
}

' #############################
' #        RELACIONES         #
' #############################

Usuario "1" -- "*" ProyectoReparacion : "Promotor asignado"
Usuario "1" -- "*" Tarea : "Obrero asignado"
Usuario "1" -- "*" LicenciaReparacion : "Funcionario asignado"
Usuario "1" -- "*" ReporteCiudadano : "Ciudadano que reporta"

ProyectoReparacion "1" -- "*" Tarea
ProyectoReparacion "1" -- "*" Material
ProyectoReparacion "1" -- "1" LicenciaReparacion
ReporteCiudadano "1" -- "1" ProyectoReparacion

@enduml 
